Dark mode enabled...and UI fixes.
Dark mode enabled...and UI fixes.

--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -12,6 +12,10 @@
 body {
   font-family: 'Inter', sans-serif;
 }
+body.dark{
+  background-color: #121212;
+  color: #ffffff;
+}
 
 body:has(.card[data-color="blue"]:hover) {
   background-color: rgb(var(--blue-rgb) / 25%);
@@ -23,7 +27,7 @@ body:has(.card[data-color="green"]:hover) {
 
 @layer utilities {
   .max-container {
-    @apply max-w-5xl mx-auto sm:p-16 pb-12 !pt-[126px] px-8 min-h-[calc(100vh-80px)];
+    @apply max-w-[100%] mx-auto sm:p-16 pb-12 !pt-[126px] px-8 min-h-[calc(100vh-80px)];
   }
 
   .head-text {
